@@ -1,3 +1,9 @@
+Fri Oct 12 09:52:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: If allow, deny, default_deny or
+	  default_allow are passed as empty lists, behave as if they were
+	  passed as None.
+
 Wed Oct 10 22:56:19 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Update some documentation comments.
